<resources>
    <string name="app_name">Ravn-Challenge</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="people_s_w">People of Star Wars</string>
    <string name="people"></string>
    <string name="person">{name}</string>
    <string name="loading">Loading</string>
    <string name="error">Failed to Load Data</string>
    <string name="general_information">General Information</string>
    <string name="eye_color">Eye Color</string>
    <string name="hair_color">Hair Color</string>
    <string name="skin_color">Skin Color</string>
    <string name="birth_year">Birth Year</string>
    <string name="vehicle">Vehicle</string>
    <string name="btn_favorite">Add Favorite</string>
    <string name="favorite_person">Person Favorite</string>
    <string name="favorite_person_detail">Detail</string>
</resources>